<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="144dp"
        android:layout_height="232dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1">

        <RadioButton
            android:id="@+id/addition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/subtraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtraction" />

        <RadioButton
            android:id="@+id/multiplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplication"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="14sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="171dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="69dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextNumber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="170dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="69dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextNumber2"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSolution"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="48dp"
        android:text="@string/textViewSolution"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="#B62929"
        android:backgroundTint="#AC2121"
        android:text="@string/buttonCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolution"
        app:rippleColor="#9F2626" />

</androidx.constraintlayout.widget.ConstraintLayout>